# toy_code

./: .gitignore  README.md  aruco_tracker.cpp
LSproblem/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  OptFunctor.hpp  README.md  cmake_install.cmake  main.cpp  testLM  testNumericalDiff.cpp  testSparse.cpp
NonliearOpt/: CMakeLists.txt  README.md
NonliearOpt/data/: manhattanOlson100.graph  manhattanOlson3500.graph  manhattanOlson4.graph  manhattanOlson500.graph
NonliearOpt/include/: Estimator.h  gnuplot-iostream.h
NonliearOpt/include/tools/: AutoConstructs.h  CholeskyCovariance.h
NonliearOpt/include/types/: Manifold.h  Manifold.hpp  Measurement.hpp  POSE2.hpp  RVWrapper.hpp  RandomVariable.h  SO2.h  SO2.hpp  Vector.h  Vector.hpp  measurement.h
NonliearOpt/src/: CholeskyCovariance.cpp  Estimator.cpp  Manifold.cpp  SO2.cpp  Vector.cpp  main.cpp
UAV_ROS_pkgs/irobot_tracker/: CMakeLists.txt  README  camera_param.xml  package.xml
UAV_ROS_pkgs/irobot_tracker/include/irobot_tracker/: SRUKF.h  pid.h  uav_math.h
UAV_ROS_pkgs/irobot_tracker/msg/: trackInfo.msg  trackerDebug.msg
UAV_ROS_pkgs/irobot_tracker/src/: SRUKF.cpp  SRUKF_controller.cpp  aruco_controller.cpp  aruco_tracker.cpp  aruco_tracker_board.cpp  board_tracker.cpp  gnuplot-iostream.h  pid.cpp
UAV_ROS_pkgs/irobot_tracker/src/math_lib/: constants.h  math_basic.c  math_matrix.c  math_quaternion.h  math_vector.c
UAV_ROS_pkgs/read_web_cam/: CMakeLists.txt  package.xml
UAV_ROS_pkgs/read_web_cam/launch/: asi.launch
UAV_ROS_pkgs/read_web_cam/src/: ASIRead.cpp  publish.cpp
UAV_ROS_pkgs/serial_to_uav/: CMakeLists.txt  package.xml
UAV_ROS_pkgs/serial_to_uav/msg/: UAV.msg  uav_ctrl.msg
UAV_ROS_pkgs/serial_to_uav/src/: serial_FSM.cpp  serial_talker.cpp
g2o_ba_test/: CMakeLists.txt  ba_demo.cpp
g2o_ba_test/CMakeModules/: FindCSparse.cmake  FindCholmod.cmake  FindSuiteSparse.cmake
g2o_ba_test/g2o/: config.h
g2o_ba_test/g2o/apps/g2o_cli/: dl_wrapper.h  g2o_cli_api.h  g2o_common.h  output_helper.h
g2o_ba_test/g2o/apps/g2o_simulator/: g2o_simulator_api.h  pointsensorparameters.h  sensor_odometry.h  sensor_odometry2d.h  sensor_odometry3d.h  sensor_pointxy.h  sensor_pointxy_bearing.h  sensor_pointxy_offset.h  sensor_pointxyz.h  sensor_pointxyz_depth.h  sensor_pointxyz_disparity.h  sensor_pose2d.h  sensor_pose3d.h  sensor_pose3d_offset.h  sensor_se3_prior.h  simulator.h  simulator2d.h  simulator2d_base.h  simulator3d.h  simulator3d_base.h  simutils.h
g2o_ba_test/g2o/core/: base_binary_edge.h  base_multi_edge.h  base_multi_edge.hpp  base_unary_edge.h  base_vertex.h  batch_stats.h  block_solver.h  block_solver.hpp  cache.h  creators.h  estimate_propagator.h  factory.h  g2o_core_api.h  hyper_dijkstra.h  hyper_graph.h  hyper_graph_action.h  jacobian_workspace.h  marginal_covariance_cholesky.h  matrix_structure.h  openmp_mutex.h  optimizable_graph.h  optimization_algorithm.h  optimization_algorithm_dogleg.h  optimization_algorithm_factory.h  optimization_algorithm_gauss_newton.h  optimization_algorithm_levenberg.h  optimization_algorithm_property.h  optimization_algorithm_with_hessian.h  parameter.h  robust_kernel.h  robust_kernel_factory.h  robust_kernel_impl.h  solver.h  sparse_block_matrix.h  sparse_block_matrix.hpp  sparse_block_matrix_ccs.h  sparse_block_matrix_diagonal.h  sparse_optimizer.h  sparse_optimizer_terminate_action.h
g2o_ba_test/g2o/examples/interactive_slam/g2o_incremental/: g2o_incremental_api.h  graph_optimizer_sparse_incremental.h  (+1 more)
g2o_ba_test/g2o/solvers/cholmod/: linear_solver_cholmod.h
g2o_ba_test/g2o/solvers/csparse/: csparse_helper.h  g2o_csparse_api.h  g2o_csparse_extension_api.h  linear_solver_csparse.h
g2o_ba_test/g2o/solvers/dense/: linear_solver_dense.h
g2o_ba_test/g2o/solvers/eigen/: linear_solver_eigen.h
g2o_ba_test/g2o/solvers/pcg/: linear_solver_pcg.h  linear_solver_pcg.hpp
g2o_ba_test/g2o/solvers/slam2d_linear/: g2o_slam2d_linear_api.h  solver_slam2d_linear.h
g2o_ba_test/g2o/solvers/structure_only/: structure_only_solver.h
g2o_ba_test/g2o/stuff/: command_args.h  filesys_tools.h  g2o_stuff_api.h  opengl_primitives.h  opengl_wrapper.h  property.h  sampler.h  scoped_pointer.h  sparse_helper.h  string_tools.h  tictoc.h  timeutil.h  unscented.h
g2o_ba_test/g2o/types/data/: data_queue.h  g2o_types_data_api.h  laser_parameters.h  raw_laser.h  robot_data.h  robot_laser.h  types_data.h  vertex_tag.h
g2o_ba_test/g2o/types/icp/: g2o_types_icp_api.h  types_icp.h
g2o_ba_test/g2o/types/sba/: g2o_types_sba_api.h  sbacam.h  types_sba.h  types_six_dof_expmap.h
g2o_ba_test/g2o/types/sclam2d/: edge_se2_odom_differential_calib.h  edge_se2_sensor_calib.h  g2o_types_sclam2d_api.h  odometry_measurement.h  types_sclam2d.h  vertex_odom_differential_params.h
g2o_ba_test/g2o/types/sim3/: sim3.h  types_seven_dof_expmap.h
g2o_ba_test/g2o/types/slam2d/: edge_se2.h  edge_se2_offset.h  edge_se2_pointxy.h  edge_se2_pointxy_bearing.h  edge_se2_pointxy_calib.h  edge_se2_pointxy_offset.h  edge_se2_prior.h  edge_se2_xyprior.h  g2o_types_slam2d_api.h  parameter_se2_offset.h  se2.h  types_slam2d.h  vertex_point_xy.h  vertex_se2.h
g2o_ba_test/g2o/types/slam3d/: dquat2mat.h  edge_se3.h  edge_se3_offset.h  edge_se3_pointxyz.h  edge_se3_pointxyz_depth.h  edge_se3_pointxyz_disparity.h  edge_se3_prior.h  g2o_types_slam3d_api.h  isometry3d_gradients.h  isometry3d_mappings.h  parameter_camera.h  parameter_se3_offset.h  parameter_stereo_camera.h  se3_ops.h  se3quat.h  types_slam3d.h  vertex_pointxyz.h  vertex_se3.h
test_line_intersection/: .CMakeLists.txt.swp  .README.md.swp  .main.cpp.swp  CMakeLists.txt  README.md  main.cpp
toy_ros_space/src/transform_graph/: .gitignore  .travis.yml  .ycm_extra_conf.py  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  mainpage.dox  package.xml  rosdoc.yaml
toy_ros_space/src/transform_graph/src/: explicit_types.cpp  graph.cpp  graph_internal.cpp  orientation.cpp  position.cpp  transform.cpp
toy_ros_space/src/transform_graph/test/: graph_test.cpp  internal_graph_test.cpp  orientation_test.cpp  position_test.cpp  transform_test.cpp
(+1378 files in other folders)
